<resources>
    <string name="app_name">Bluetooth Research</string>
    <string name="electrocardiogram">Electrocardiogram</string>
    <string name="optical_hrm">Optical HRM</string>
    <string name="temperature">Temperature</string>
    <string name="invert_ecg">Invert ECG</string>
    <string name="derajat_celcius">°C</string>
    <string name="derajat_fahrenheit">°F</string>
    <string name="bpm">BPM</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="activity">Activity</string>
    <string name="confidence">Confidence</string>
    <string name="ch1">Ch1</string>
    <string name="ch2">Ch2</string>
    <string name="average_r">Average R-to-R</string>
    <string name="current_r">Current R-to-R</string>
    <string name="ecg_mv">ECG Mv</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="share">Share</string>
    <string name="sync">Sync</string>
    <string name="measurements">Measurements</string>
    <string name="sync_data">Sinkronisasi Data...</string>
    <string name="measurement_setting">Measurement Setting</string>
    <string name="monitoring">Monitoring</string>
    <string name="background_monitoring">Background Monitoring</string>
    <string name="stand_by">Stand By</string>
    <string name="checking">Checking...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
