<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_start"
        android:title="@string/start"
        android:icon="@drawable/ic_play_arrow"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_stop"
        android:title="@string/stop"
        android:visible="false"
        android:icon="@drawable/ic_stop"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_invert"
        android:title="@string/invert_ecg"
        app:showAsAction="always"
        android:icon="@drawable/ic_invert_colors"/>
</menu>