<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ActionActivity"
    android:gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_electrocardiogram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black_effective"
            android:text="@string/electrocardiogram"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_optical_hrm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textColor="@color/black_effective"
            android:textAllCaps="true"
            android:text="@string/optical_hrm"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black_effective"
            android:text="@string/temperature"/>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>